12-kuber/1.5/files/deploy-backend-netology.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wbitt/network-multitool
